# AP-project-retakeCI

./: CMakeLists.txt  ReadMe.md
assets/player/: animations.JSON
assets/tempPlatform/: animations.JSON
include/: abstractFactory.h  entity.h  platform.h  player.h  stopwatch.h
main_source_files/: game.cpp  game.h  main.cpp
visual_source_files/: animationLibrary.cpp  animationLibrary.h  concreteCamera.cpp  concreteCamera.h  concreteFactory.cpp  concreteFactory.h  view.cpp  view.h  viewEntity.cpp  viewEntity.h
world_source_files/: CMakeLists.txt  abstractFactory.cpp  backgroundTile.cpp  backgroundTile.h  bonusItem.cpp  bonusItem.h  entity.cpp  entitycamera.cpp  entitycamera.h  hitbox.cpp  hitbox.h  platform.cpp  player.cpp  rng.cpp  rng.h  singletons.h  stopwatch.cpp  world.cpp  world.h
